--- a/index.html
+++ b/index.html
@@ -45,7 +45,19 @@ Incomplete = Does not meet all grading criteria points above. Needs improvement 
 </head>
 <body>
 
-<div id='showingTheDate'></div>	
+<div id='morning-image'></div>
+
+<h1 id='greeting'></h1>
+
+<div id='wrapper'>	
+
+	<div id='showingHours'></div>
+
+	<div id='showingMinutes'></div>
+
+	<div id='showingSeconds'></div>
+
+</div>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
