--- a/index.html
+++ b/index.html
@@ -1,4 +1,31 @@
+<!-- another HTML file created by Lee Barber -->
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="index.css">
+</head>
+<body>
+
+<h1 id='greeting'></h1>
+
+<div id='wrapper'>	
+
+	<div id='showingHours'></div>
+
+	<div id='showingMinutes'></div>
+
+	<div id='showingSeconds'></div>
+
+</div>
+
+<script type="text/javascript" src="index.js"></script>
+</body>
+</html>
+
 <!-- Digital Clock Workshop: Individual
+
 Goal: To create a single page app demonstrating understanding of basic JavaScript skills.
 
 Assignment:
@@ -37,28 +64,4 @@ Complete = Meets ALL grading criteria points above.
 
 Incomplete = Does not meet all grading criteria points above. Needs improvement or missing submission. -->
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-	<link rel="stylesheet" type="text/css" href="index.css">
-</head>
-<body>
-
-<div id='morning-image'></div>
-
-<h1 id='greeting'></h1>
-
-<div id='wrapper'>	
-
-	<div id='showingHours'></div>
-
-	<div id='showingMinutes'></div>
-
-	<div id='showingSeconds'></div>
-
-</div>
-
-<script type="text/javascript" src="index.js"></script>
-</body>
-</html>
+<!-- another HTML file created by Lee Barber -->
